added alternate "sans-serif" where forgotten

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -95,7 +95,7 @@ nav {
   text-align: center;
   
   .menu-list {
-    font-family: 'Jockey One';
+    font-family: $primary-font, sans-serif;
     text-transform: uppercase;
     font-size: 4rem;
 
@@ -125,7 +125,7 @@ header {
      text-transform:uppercase;
      color: rgb(255, 255, 255);
      font-size: clamp(2.4rem, 8vw, 2.5rem);
-     font-family: 'Jockey One';
+     font-family: $primary-font, sans-serif;
      letter-spacing: 4px;
    }
 }
@@ -200,7 +200,7 @@ p {
 .bottom {
   text-align: center;
     a {
-      font-family: 'Jockey One';
+      font-family: $primary-font, sans-serif;
       color: white;
       text-transform: uppercase;
       text-decoration: none;
@@ -231,7 +231,7 @@ p {
   color: white;
 
   h3 {
-    font-family: 'Jockey One';
+    font-family: $primary-font, sans-serif;
     text-transform: uppercase;
     font-size: 2rem;
     display: inline-block;
@@ -245,7 +245,7 @@ p {
     transform: rotate(-3deg);
     
     span {
-      font-family: 'Courier Prime';
+      font-family: 'Courier Prime', monospace;
       text-transform: uppercase;
     }
 
@@ -273,21 +273,21 @@ p {
   }
 
   .about {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: $secondary-font, sans-serif;
     font-size: 1.45rem;
     margin: 5px;
   }
 
   .price {
     display: block;
-    font-family: 'Jockey One', sans-serif;
+    font-family: $primary-font, sans-serif;
     font-size: 2rem;
     margin-bottom: 60px;
   }
 }
 
 .page3 {
-  font-family: $primary-font;
+  font-family: $primary-font, sans-serif;
   text-transform: uppercase;
   color: white;
   padding: 0 20px;
@@ -334,7 +334,7 @@ p {
         gap: 16px;
 
         .form-button {
-          font-family: $primary-font;
+          font-family: $primary-font, sans-serif;
           text-transform: uppercase;
           color: black;
           padding: 0 45px;
@@ -413,7 +413,7 @@ p {
 
   .decline-button,
   .accept-button {
-    font-family: $primary-font;
+    font-family: $primary-font, sans-serif;
     text-transform: uppercase;
     font-size: clamp(1rem, 8vw, 1.3rem);
     padding: 5px 25px;
