--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ $secondary-font: "Roboto Condensed";
 .text {
   width: 90%;
   max-width: 60ch;
-  font-family: 'Jockey One';
+  font-family: $primary-font, sans-serif;
   font-size: 35px;
   margin: 10px auto;
   text-align: center;
