changed name pic3 page 2

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -206,13 +206,13 @@ p {
       text-decoration: none;
     }
 }
-
+/*PAGE 2 Start*/
 .page2-images {
   display: flex;
   justify-content: center;
   margin: 16px 0;
 
-  .p2-1, .p2 {
+  .p2-1, .p2-3 {
     width: 30%;
     height: auto;
   }
