--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -159,7 +159,7 @@ h1 {
 
         .p2-1,
         .p2-middle,
-        .p2 {
+        .p2-3 {
             object-fit: cover;
             width: 100%;
             height: 400px;
@@ -175,7 +175,7 @@ h1 {
             width: 100%;
         }
 
-        .p2 {
+        .p2-3 {
             grid-column: span 4;
             width: 100%;
         }
