--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -278,8 +278,8 @@ h1 {
                 filter: drop-shadow(-2px -2px 0 black);
 
                 .contact-list {
-                    font-size: 35px;
-
+                    font-size: 2.18rem;
+                    
                     a {
                         color: #2ab0dd;
 
