--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -190,7 +190,7 @@ p {
 }
 
 .menu-link {
-  font-size: 35px;
+  font-size: rem(35);
 
   &:hover {
     color: $primary-color;
@@ -373,7 +373,7 @@ p {
 
         .contact-list { /*Li*/
           display: flex;
-          font-size: 40px; /*text ej ikon*/
+          font-size: rem(40); /*text ej ikon*/
           padding: 1rem;
           align-items: center;
 
